--- a/style.css
+++ b/style.css
@@ -56,3 +56,22 @@ p { font-size: 1.1rem; opacity: 0.9; margin-bottom: 30px; }
     box-shadow: 0 5px 20px rgba(0,0,0,0.2);
     z-index: 999;
 }
+/* Membuat Peta Mengikuti Lebar Layar */
+.map-responsive {
+    overflow: hidden;
+    padding-bottom: 56.25%; /* Rasio peta 16:9 */
+    position: relative;
+    height: 0;
+    border-radius: 15px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    margin-bottom: 50px;
+}
+
+.map-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    border: none;
+}
